Total number of IT students on hr dashboard

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -311,6 +311,53 @@
         <!-- ------End of header section------- -->
 
         <!-- ---------Hero Section -->
+         <div class="totesContain">
+            <div class="toteStudent">
+                <div class="totesHeadTxt">
+                    Total IT Students
+                </div>
+                <div class="totesHeadNum">
+                    24
+                </div>
+            </div>
+            <div class="topology">
+                <img src="./assets/Topology-1 (1) 1.svg" alt="">
+
+            </div>
+            <div class="totesGender">
+                <div class="totesMale">
+                    <div class="maleImg">
+                        <img src="./assets/GenderMale 1.svg" alt="">
+                    </div>
+                    <div class="maleTxtContain">
+                        <div class="maleTxt">
+                            Male
+                        </div>
+                        <div class="maleNum">
+                            15
+                        </div>
+
+                    </div>
+                </div>
+                <div class="totesFemale">
+                    <div class="totesMale">
+                        <div class="maleImg">
+                            <img src="./assets/GenderFemale 1.svg" alt="">
+                        </div>
+                        <div class="maleTxtContain">
+                            <div class="maleTxt">
+                                Female
+                            </div>
+                            <div class="maleNum">
+                                9
+                            </div>
+    
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+         </div>
     </section>
     <script src="./routes/hrDashRoute.js"></script>
     <script src="./scripts/hrDash.js"></script>
