Modified Email field

--- a/frontend/LOGIN/superLogin.html
+++ b/frontend/LOGIN/superLogin.html
@@ -35,7 +35,7 @@
                     Email
                 </div>
                 <div class="eBox">
-                    ludd@example.com
+                    <input class="email" type="email" id="email" placeholder="ludd@example.com" />
                 </div>
                 <div class="pText">
                     Password
