--- a/frontend/LOGIN/superLogin.html
+++ b/frontend/LOGIN/superLogin.html
@@ -35,13 +35,13 @@
                     Email
                 </div>
                 <div class="eBox">
-                    <input class="email" type="email" id="email" placeholder="ludd@example.com" />
+                    <input class="efield" type="email" id="efield" placeholder="ludd@example.com" />
                 </div>
                 <div class="pText">
                     Password
                 </div>
                 <div class="pBox">
-                    *************
+                    <input class="pfield" type="password" placeholder="*************" id="pfield">
                 </div>
                 <div class="lButton">
                     Log in
