renamed login file

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -43,9 +43,11 @@
                 <div class="pBox">
                     <input class="pfield" type="password" placeholder="*************" id="pfield">
                 </div>
-                <div class="lButton">
+                <a href="homeListView.html">
+                <button class="lButton">
                     Log in
-                </div>
+                </button>
+                </a>
             </div>
         </div>
     </div>
