Added Hover Effect on Login Button

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="./STYLES/superLogin.css">
+    <link rel="stylesheet" href="./STYLES/login.css">
 </head>
 <body>
     <nav class="mainNav">
@@ -43,7 +43,7 @@
                 <div class="pBox">
                     <input class="pfield" type="password" placeholder="*************" id="pfield">
                 </div>
-                <a href="homeListView.html">
+                <a href="/frontend/SUPERVISOR VIEW/homeListView.html">
                 <button class="lButton">
                     Log in
                 </button>
@@ -52,5 +52,5 @@
         </div>
     </div>
 </body>
-<script src="./SCRIPT/superLogin.js"></script>
+<script src="./SCRIPT/login.js"></script>
 </html>
