Implement login functionality with user role handling and fix script path

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -52,5 +52,5 @@
         </div>
     </div>
 </body>
-<script src="./SCRIPT/login.js"></script>
+<script src="./scripts/login.js"></script>
 </html>
