Hr dashboard completed

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -471,6 +471,52 @@
                                 Supervisors
 
                             </div>
+                            <div class="supervisorsContain">
+                                <div class="supervisor">
+                                    <div class="superPhoto">
+                                        <img src="./assets/johndoe.png" alt="">
+                                    </div>
+                                    <div class="superName">
+                                        Lanre Adams
+                                    </div>
+                                    <div class="supervisorUnit">
+                                        IT
+                                    </div>
+                                </div>
+                                <div class="supervisor">
+                                    <div class="superPhoto">
+                                        <img src="./assets/johndoe.png" alt="">
+                                    </div>
+                                    <div class="superName">
+                                        Lanre Adams
+                                    </div>
+                                    <div class="supervisorUnit">
+                                        IT
+                                    </div>
+                                </div>
+                                <div class="supervisor">
+                                    <div class="superPhoto">
+                                        <img src="./assets/johndoe.png" alt="">
+                                    </div>
+                                    <div class="superName">
+                                        Lanre Adams
+                                    </div>
+                                    <div class="supervisorUnit">
+                                        IT
+                                    </div>
+                                </div>
+                                <div class="supervisor">
+                                    <div class="superPhoto">
+                                        <img src="./assets/johndoe.png" alt="">
+                                    </div>
+                                    <div class="superName">
+                                        Lanre Adams
+                                    </div>
+                                    <div class="supervisorUnit">
+                                        IT
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
