hr view completed

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -525,7 +525,7 @@
                         <div class="studentHead">
                             Students
                         </div>
-                        <div class="viewBtn">
+                        <div class="viewBtn" id="viewBtn">
                             View All
                         </div>
                     </div>
