WIP: save progress before checkout

--- a/frontend/LOGIN/homeListView.html
+++ b/frontend/LOGIN/homeListView.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="./styles/homeListView.css">
+    <link rel="stylesheet" href="./STYLES/homeListView.css">
 </head>
 <body>
     <nav class="mainNav">
         <div class="headerLogo">
             <img src="./ASSETS/24388.svg" alt="">
         </div>
-        <div class="signout" id="signout">
+        <div class="signout">
             <div class="sText" id="sText">
                 Sign Out
             </div>
@@ -21,16 +21,7 @@
         </div>
     </nav>
     <div class="mainContainer">
-        <div class="topSection">
-            <div class="ItHeader"></div>
-            <div class="searchBars"></div>
-        </div>
-        <div class="table">
-            <div class="tableHeaders"></div>
-            <div class="tableRows"></div>
-        </div>
     </div>
 </body>
-<script src="./scripts/homeListView.js"></script>
-<script src="./routes/signout.js"></script>
+<script src="./SCRIPT/homeListView.js"></script>
 </html>
