--- a/frontend/SUPERVISOR VIEW/homeListView.html
+++ b/frontend/SUPERVISOR VIEW/homeListView.html
@@ -22,8 +22,17 @@
     </nav>
     <div class="mainContainer">
         <div class="topSection">
-            <div class="ItHeader"></div>
-            <div class="searchBars"></div>
+            <div class="ItHeader">
+                IT Students
+            </div>
+            <div class="searchBars">
+                <div class="searchName">
+                    <div class="sIcon"></div>
+                    <div class="sText"></div>
+                </div>
+                <div class="searchInstit"></div>
+                <div class="searchInterest"></div>
+            </div>
         </div>
         <div class="table">
             <div class="tableHeaders"></div>
