Fix login form structure: remove unnecessary anchor tag and ensure proper form submission

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -31,6 +31,7 @@
                 <div class="lTag">
                     Enter your email and password to login
                 </div>
+                <form id="loginForm" action="./scripts/login.js" method="post">
                 <div class="eText">
                     Email
                 </div>
@@ -43,11 +44,10 @@
                 <div class="pBox">
                     <input class="pfield" type="password" placeholder="*************" id="pfield">
                 </div>
-                <a href="/frontend/SUPERVISOR VIEW/homeListView.html">
-                <button class="lButton">
+                <button class="lButton" type="submit">
                     Log in
                 </button>
-                </a>
+                </form>
             </div>
         </div>
     </div>
