Fix login form structure: remove unnecessary anchor tag and ensure proper form submission

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -33,6 +33,7 @@
                         Enter your email and password to login
                     </div>
                 </div>
+                <form id="loginForm" class="loginForm" action="./scripts/login.js" method="post">
                 <div class="logbody" id="logbody">
                     <div class="eText" id="eText">
                         Email
@@ -49,11 +50,11 @@
                     <button class="lButton" id="lButton">
                         Log in
                     </button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script src="./routes/login.js"></script>
 <script src="./scripts/login.js"></script>
 </html>
