--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./styles/login.css">
 </head>
+
 <body>
     <nav class="mainNav" id="mainNav">
         <div class="headerLogo" id="headerLogo">
@@ -56,5 +58,7 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./scripts/login.js"></script>
+
 </html>
