--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./STYLES/login.css">
 </head>
+
 <body>
     <nav class="mainNav">
         <div class="headerLogo">
@@ -32,25 +34,27 @@
                     Enter your email and password to login
                 </div>
                 <form id="loginForm" action="./scripts/login.js" method="post">
-                <div class="eText">
-                    Email
-                </div>
-                <div class="eBox">
-                    <input class="efield" type="email" id="efield" placeholder="ludd@example.com" />
-                </div>
-                <div class="pText">
-                    Password
-                </div>
-                <div class="pBox">
-                    <input class="pfield" type="password" placeholder="*************" id="pfield">
-                </div>
-                <button class="lButton" type="submit">
-                    Log in
-                </button>
+                    <div class="eText">
+                        Email
+                    </div>
+                    <div class="eBox">
+                        <input class="efield" type="email" id="email" placeholder="ludd@example.com" />
+                    </div>
+                    <div class="pText">
+                        Password
+                    </div>
+                    <div class="pBox">
+                        <input class="pfield" type="password" placeholder="*************" id="password">
+                    </div>
+                    <button class="lButton" type="submit">
+                        Log in
+                    </button>
                 </form>
             </div>
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./scripts/login.js"></script>
+
 </html>
