Fix login form: remove action attribute and correct input IDs for email and password fields

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -35,19 +35,19 @@
                         Enter your email and password to login
                     </div>
                 </div>
-                <form id="loginForm" class="loginForm" action="./scripts/login.js" method="post">
+                <form id="loginForm" class="loginForm">
                 <div class="logbody" id="logbody">
                     <div class="eText" id="eText">
                         Email
                     </div>
                     <div class="eBox" id="eBox">
-                        <input class="efield" type="email" id="efield" placeholder="ludd@example.com" />
+                        <input class="efield" type="email" id="email" placeholder="ludd@example.com" />
                     </div>
                     <div class="pText" id="pText">
                         Password
                     </div>
                     <div class="pBox" id="pBox">
-                        <input class="pfield" type="password" placeholder="*************" id="pfield">
+                        <input class="pfield" type="password" placeholder="*************" id="password">
                     </div>
                     <button class="lButton" id="lButton">
                         Log in
