Completed html, CSS and Js code for homeListView

--- a/frontend/SUPERVISOR VIEW/homeListView.html
+++ b/frontend/SUPERVISOR VIEW/homeListView.html
@@ -16,7 +16,7 @@
                 Sign Out
             </div>
             <div class="sIcon">
-                <img src="./assets/logoutBtn.png" alt="">
+                <img src="./assets/logbntsvg.svg" alt="">
             </div>
         </div>
     </nav>
@@ -27,16 +27,94 @@
             </div>
             <div class="searchBars">
                 <div class="searchName">
-                    <div class="sIcon"></div>
-                    <div class="sText"></div>
+                    <div class="searchIcon">
+                        <img src="./assets/MagnifyingGlass.png" alt="">
+                    </div>
+                    <div class="searchText">
+                        <input class="searchField" type="search" placeholder="Search by Name" id="searchField">
+                    </div>
                 </div>
-                <div class="searchInstit"></div>
-                <div class="searchInterest"></div>
+                <div class="searchInstit">
+                    <div class="searchIcon">
+                        <img src="./assets/MagnifyingGlass.png" alt="">
+                    </div>
+                    <div class="searchText">
+                        <input class="searchField" type="search" placeholder="Search by institution" id="searchField">
+                    </div>
+                </div>
+                <div class="searchInterest">
+                    <div class="searchIcon">
+                        <img src="./assets/MagnifyingGlass.png" alt="">
+                    </div>
+                    <div class="searchText">
+                        <input class="searchField" type="search" placeholder="Search by Area of Interest" id="searchField">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="table">
-            <div class="tableHeaders"></div>
-            <div class="tableRows"></div>
+            <div class="tableHeaders">
+                <div class="c1">
+                    S/N
+                </div>
+                <div class="c2">
+                    Name
+                </div>
+                <div class="c3">
+                    Institution
+                </div>
+                <div class="c4">
+                    Email
+                </div>
+                <div class="c5">
+                    Contact
+                </div>
+                <div class="c6">
+                    Area of Interest
+                </div>
+            </div>
+            <div class="tableRows">
+                <div class="c1">
+                    1
+                </div>
+                <div class="c2">
+                    Ralph Edwards
+                </div>
+                <div class="c3">
+                    Universal Technical Institute
+                </div>
+                <div class="c4">
+                    danghoang87hl@gmail.com
+                </div>
+                <div class="c5">
+                    096919566
+                </div>
+                <div class="c6">
+                    Meditation
+                </div>
+            </div>
+            <div class="straightLines"></div>
+            <div class="tableRows">
+                <div class="c1">
+                    2
+                </div>
+                <div class="c2">
+                    Ronald Richards
+                </div>
+                <div class="c3">
+                    Tennessee College of Applied Technology
+                </div>
+                <div class="c4">
+                    tranthuy.nute@gmail.com
+                </div>
+                <div class="c5">
+                    090429467
+                </div>
+                <div class="c6">
+                    Art
+                </div>
+            </div>
+            <div class="straightLines"></div>
         </div>
     </div>
 </body>
