Fixed scrolling on hrDashBoard

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -88,6 +88,16 @@
                         </div>
                         <div class="NameFieldContain">
                             <div class="NameFieldText">
+                                Duration:
+                            </div>
+                            <div class="NameFieldInput">
+                                <input type="text" placeholder="6 Months">
+
+                            </div>
+
+                        </div>
+                        <div class="NameFieldContain">
+                            <div class="NameFieldText">
                                 Unit:
                             </div>
                             <div class="NameFieldInput" id="unitDisplay">
