--- a/frontend/STAFF VIEW/log.html
+++ b/frontend/STAFF VIEW/log.html
@@ -155,34 +155,34 @@
             <div class="otherHero">
                 <div class="activeWeekBtnContain">
                     <div class="weekBtn" data-week="1">
-                        <div class="monthTxt">
+                        <div class="weekTxt">
                             Week 1
                         </div>
-                        <div class="checkBox">
+                        <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
                     <div class="weekBtn" data-week="2">
-                        <div class="monthTxt">
+                        <div class="weekTxt">
                             Week 2
                         </div>
-                        <div class="checkBox">
+                        <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
                     <div class="weekBtn" data-week="3">
-                        <div class="monthTxt">
+                        <div class="weekTxt">
                             Week 3
                         </div>
-                        <div class="checkBox">
+                        <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
                     <div class="weekBtn" data-week="4">
-                        <div class="monthTxt">
+                        <div class="weekTxt">
                             Week 4
                         </div>
-                        <div class="checkBox">
+                        <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
                         </div>
                     </div>
