Fix button type for login submission in login form

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -49,7 +49,7 @@
                     <div class="pBox" id="pBox">
                         <input class="pfield" type="password" placeholder="*************" id="password">
                     </div>
-                    <button class="lButton" id="lButton">
+                    <button type="submit" class="lButton" id="lButton">
                         Log in
                     </button>
                     </form>
