--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -49,7 +49,7 @@
                     <div class="pBox" id="pBox">
                         <input class="pfield" type="password" placeholder="*************" id="password">
                     </div>
-                    <button type="submit" class="lButton" id="lButton">
+                    <button class="lButton" id="lButton" type="submit">
                         Log in
                     </button>
                     </form>
@@ -60,5 +60,4 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./scripts/login.js"></script>
-
 </html>
