--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -32,17 +32,14 @@
             </div>
             <!-- ----------Add student Modal-------- -->
             <div class="overlay" id="overlay">
-                <div class="addModal" id="addModal">
+                <div class="addModal" id="addStudentModal">
                     <div class="modalHead">
                         <div class="headText">
                             New Student
-
                         </div>
                         <div class="closeBox">
                             <img src="./assets/close-circle.svg" alt="" id="closeModal">
-
                         </div>
-
                     </div>
 
                     <div class="studentInfo">
@@ -51,8 +48,7 @@
                                 Name:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="text">
-
+                                <input type="text" id="studentName">
                             </div>
 
                         </div>
@@ -61,7 +57,7 @@
                                 Institution:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="text">
+                                <input type="text" id="studentInstitution">
 
                             </div>
 
@@ -71,7 +67,7 @@
                                 Level:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="text">
+                                <input type="text" id="studentLevel">
 
                             </div>
 
@@ -81,7 +77,7 @@
                                 Course of Study:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="text">
+                                <input type="text" id="studentCourse">
 
                             </div>
 
@@ -91,7 +87,7 @@
                                 Duration:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="text" placeholder="6 Months">
+                                <input type="text" id="studentDuration" placeholder="6 Months">
 
                             </div>
 
@@ -101,7 +97,7 @@
                                 Unit:
                             </div>
                             <div class="NameFieldInput" id="unitDisplay">
-                                <input type="text" readonly>
+                                <input type="text" id="studentUnit" readonly>
                             </div>
                             <div class="caretdown" id="caretdown">
                                 <img src="./assets/CaretDown.svg" alt="">
@@ -116,7 +112,7 @@
                                     Communications
                                 </div>
                                 <div class="unitLIst">
-                                    Startegic Information
+                                    Strategic Information
                                 </div>
                                 <div class="unitLIst">
                                     Human Resources
@@ -125,57 +121,49 @@
                                     Administration
                                 </div>
                             </div>
-
                         </div>
+
                         <div class="NameFieldContain">
                             <div class="NameFieldText">
                                 Supervisor:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="text" readonly>
-
+                                <input type="text" id="studentSupervisor" readonly>
                             </div>
-
                         </div>
+
                         <div class="NameFieldContain">
                             <div class="NameFieldText">
                                 Email:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="email">
-
+                                <input type="email" id="studentEmail">
                             </div>
-
                         </div>
+
                         <div class="NameFieldContain">
                             <div class="NameFieldText">
                                 Password:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="password">
-
+                                <input type="password" id="studentPassword">
                             </div>
-
                         </div>
+    
                         <div class="NameFieldContain">
                             <div class="NameFieldText">
                                 Confirm Password:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="password">
-
+                                <input type="password" id="studentConfirmPassword">
                             </div>
-
                         </div>
 
                     </div>
                     <div class="saveBtn" id="saveBtn">
                         Add
-
                     </div>
-
                 </div>
-
             </div>
             <!-- -------------End of modal--------- -->
             <!-- ------Mini Modal----- -->
