deleted redundant codes and isolated some classnames

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -416,7 +416,7 @@
                 </div>
                 <div class="bottomMore">
                     <div class="unitsBarContain">
-                        <div class="superHead">
+                        <div class="superHead2">
                             Units
                         </div>
                         <div class="unitListContain" id="unitListContainer">
@@ -464,15 +464,12 @@
 
                     </div>
                     <div class="superList">
-                        <div class="superHead">
+                        <div class="superHead3">
                             Supervisors
 
                         </div>
                         <div class="supervisorsContain" id="supervisorList">
                             <div class="supervisor">
-                                <div class="superPhoto">
-                                    <img src="./assets/johndoe.png" alt="">
-                                </div>
                                 <div class="superName">
                                     Lanre Adams
                                 </div>
@@ -481,9 +478,6 @@
                                 </div>
                             </div>
                             <div class="supervisor">
-                                <div class="superPhoto">
-                                    <img src="./assets/johndoe.png" alt="">
-                                </div>
                                 <div class="superName">
                                     Lanre Adams
                                 </div>
@@ -492,9 +486,6 @@
                                 </div>
                             </div>
                             <div class="supervisor">
-                                <div class="superPhoto">
-                                    <img src="./assets/johndoe.png" alt="">
-                                </div>
                                 <div class="superName">
                                     Lanre Adams
                                 </div>
@@ -503,9 +494,6 @@
                                 </div>
                             </div>
                             <div class="supervisor">
-                                <div class="superPhoto">
-                                    <img src="./assets/johndoe.png" alt="">
-                                </div>
                                 <div class="superName">
                                     Lanre Adams
                                 </div>
@@ -528,9 +516,6 @@
                 </div>
                 <div class="lessBody">
                     <div class="studentsList" id="studentList">
-                        <div class="studPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-                        </div>
                         <div class="nameUnitContain">
                             <div class="nameBox">
                                 Okoye Daniel
@@ -541,9 +526,6 @@
                         </div>
                     </div>
                     <div class="studentsList">
-                        <div class="studPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-                        </div>
                         <div class="nameUnitContain">
                             <div class="nameBox">
                                 Okoye Daniel
@@ -554,9 +536,6 @@
                         </div>
                     </div>
                     <div class="studentsList">
-                        <div class="studPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-                        </div>
                         <div class="nameUnitContain">
                             <div class="nameBox">
                                 Okoye Daniel
@@ -567,9 +546,6 @@
                         </div>
                     </div>
                     <div class="studentsList">
-                        <div class="studPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-                        </div>
                         <div class="nameUnitContain">
                             <div class="nameBox">
                                 Okoye Daniel
@@ -580,9 +556,6 @@
                         </div>
                     </div>
                     <div class="studentsList">
-                        <div class="studPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-                        </div>
                         <div class="nameUnitContain">
                             <div class="nameBox">
                                 Okoye Daniel
@@ -593,9 +566,6 @@
                         </div>
                     </div>
                     <div class="studentsList">
-                        <div class="studPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-                        </div>
                         <div class="nameUnitContain">
                             <div class="nameBox">
                                 Okoye Daniel
@@ -606,9 +576,6 @@
                         </div>
                     </div>
                     <div class="studentsList">
-                        <div class="studPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-                        </div>
                         <div class="nameUnitContain">
                             <div class="nameBox">
                                 Okoye Daniel
