progress bar for unit edited

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -422,7 +422,7 @@
                         <div class="unitListContain" id="unitListContainer">
                             <div class="units">
                                 <div class="totesUnit">
-                                    Communications
+                                    Comms.
                                 </div>
                                 <div class="totesNum">
                                     5
@@ -430,7 +430,7 @@
                             </div>
                             <div class="units">
                                 <div class="totesUnit">
-                                    Information Technology
+                                    IT
                                 </div>
                                 <div class="totesNum">
                                     7
@@ -438,7 +438,7 @@
                             </div>
                             <div class="units">
                                 <div class="totesUnit">
-                                    Strategic Information
+                                    SI
                                 </div>
                                 <div class="totesNum">
                                     8
@@ -446,7 +446,7 @@
                             </div>
                             <div class="units">
                                 <div class="totesUnit">
-                                    Human Resources
+                                    HR
                                 </div>
                                 <div class="totesNum">
                                     4
@@ -454,7 +454,7 @@
                             </div>
                             <div class="units">
                                 <div class="totesUnit">
-                                    Administration
+                                    Admin.
                                 </div>
                                 <div class="totesNum">
                                     4
