--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -482,7 +482,7 @@
                                     Lanre Adams
                                 </div>
                                 <div class="supervisorUnit">
-                                    IT
+                                    Communications
                                 </div>
                             </div>
                             <div class="supervisor">
