--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -490,7 +490,7 @@
                                     Lanre Adams
                                 </div>
                                 <div class="supervisorUnit">
-                                    IT
+                                    Strategic Information
                                 </div>
                             </div>
                             <div class="supervisor">
