--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -594,6 +594,7 @@
     <script src="./scripts/hrDash.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./scripts/adminDash.js"></script>
+    <script src="./scripts/addStudentModal.js"></script>
 </body>
 
 </html>
