updated all pages in supervisor view

--- a/frontend/LOGIN/login.html
+++ b/frontend/LOGIN/login.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="mainNav" id="mainNav">
         <div class="headerLogo" id="headerLogo">
-            <img src="./ASSETS/24388.svg" alt="">
+            <img src="./assets/24388.svg" alt="">
         </div>
     </nav>
     <div class="mainContainer" id="mainContainer">
@@ -49,7 +49,7 @@
                     <div class="pBox" id="pBox">
                         <input class="pfield" type="password" placeholder="*************" id="password">
                     </div>
-                    <button class="lButton" id="lButton" type="submit">
+                    <button class="lButton" id="lButton">
                         Log in
                     </button>
                     </form>
@@ -60,4 +60,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./scripts/login.js"></script>
+<script src="./scripts/auth.js"></script>
+
 </html>
