add interest input field to student form in HR dashboard

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -94,6 +94,16 @@
                         </div>
                         <div class="NameFieldContain">
                             <div class="NameFieldText">
+                                Interest:
+                            </div>
+                            <div class="NameFieldInput">
+                                <input type="text" id="studentDuration" placeholder="UI/UX">
+
+                            </div>
+
+                        </div>
+                        <div class="NameFieldContain">
+                            <div class="NameFieldText">
                                 Unit:
                             </div>
                             <div class="NameFieldInput" id="unitDisplay">
