update student interest input field in HR dashboard and integrate with add student modal

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -97,7 +97,7 @@
                                 Interest:
                             </div>
                             <div class="NameFieldInput">
-                                <input type="text" id="studentDuration" placeholder="UI/UX">
+                                <input type="text" id="studentInterest" placeholder="UI/UX">
 
                             </div>
 
