Fix supervisor assignment logic by updating database field references and enhance user interface interactions in HR dashboard

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -603,6 +603,7 @@
     <script src="./routes/hrDashRoute.js"></script>
     <script src="./scripts/hrDash.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./scripts/assignSupervisor.js"></script>
     <script src="./scripts/addStudentModal.js"></script>
     <script src="./scripts/adminDash.js"></script>
     
