Add student view routes and implement student data fetching in frontend

--- a/frontend/HR VIEW/hrGrid.html
+++ b/frontend/HR VIEW/hrGrid.html
@@ -1083,6 +1083,7 @@
     </section>
     <script src="./scripts/hrGrid.js"></script>
     <script src="./routes/hrDashRoute.js"></script>
+    <script src="./scripts/studentGrid.js"></script>
 </body>
 
 </html>
