Update user registration to allow HR ID assignment and enhance student modal data handling

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -524,7 +524,7 @@
                         View All
                     </div>
                 </div>
-                <div class="lessBody">
+                <div class="lessBody" id="lessBody">
                     <div class="studentsList" id="studentList">
                         <div class="nameUnitContain">
                             <div class="nameBox">
